--- a/app/globals.css
+++ b/app/globals.css
@@ -7,4 +7,16 @@
   body {
     @apply bg-slate-900 text-slate-200
   }
+  button {
+    @apply hover:scale-110 transition-all duration-100
+  }
+}
+
+@layer utilities {
+  .btn{
+    @apply px-4 py-2 text-sm capitalize rounded-xl
+  }
+  .btn-danger {
+@apply bg-red-600 border-red-600 
+  }
 }
