--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply bg-slate-900 text-slate-200
+    @apply container max-w-2xl px-6 mx-auto bg-slate-900 text-slate-200
   }
   button {
     @apply hover:scale-110 transition-all duration-100
@@ -14,9 +14,15 @@
 
 @layer utilities {
   .btn{
-    @apply px-4 py-2 text-sm capitalize rounded-xl
+    @apply border px-4 py-2 text-sm capitalize rounded-xl
   }
   .btn-danger {
 @apply bg-red-600 border-red-600 
   }
+  .btn-primary {
+    @apply bg-slate-700 border-slate-700 text-lime-400
+  }
+  .btn-primary-outline {
+       @apply  border-lime-400 text-lime-400
+     }
 }
