--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,14 @@
   button {
     @apply hover:scale-110 transition-all duration-100
   }
+  input {
+    @apply px-4 py-2 bg-slate-600 rounded-xl
+  }
 }
 
 @layer utilities {
   .btn{
-    @apply border px-4 py-2 text-sm capitalize rounded-xl
+    @apply self-start border px-4 py-2 text-sm capitalize rounded-xl
   }
   .btn-danger {
 @apply bg-red-600 border-red-600 
@@ -25,4 +28,8 @@
   .btn-primary-outline {
        @apply  border-lime-400 text-lime-400
      }
+  .input-grp {
+    @apply flex flex-col gap-4
+  }
+
 }
